Add termination reasons and decode captures with UTF-8 replacement